2010-11-29  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/component/consumers/disker/disker.py:
	Remove unused imports

2010-11-29  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/component/consumers/disker/disker.py:
	Add log category to the disker

2010-11-29  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/component/consumers/disker/disker.py:
	Don't start recording until we get the first tdt if we 
	are syncing on tdt's

2010-11-29  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/component/consumers/disker/disker.py:
	Add log category to the disker

2010-11-26  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/component/consumers/disker/disker.py:
	* flumotion/component/consumers/disker/disker.xml:
	Add a property to sync on tdt events

2010-11-26  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/component/consumers/disker/disker.py:
	Use a common pad probe for events and buffers

2010-11-26  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/component/consumers/disker/disker.py:
	* flumotion/component/consumers/disker/disker.xml:
	Add a new property to write an index for each file created by
	the disker

2010-11-26  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/component/consumers/disker/disker.py:
	* flumotion/test/test_component_disker.py:
	Add an index class and unit tests

2010-11-26  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/component/consumers/disker/disker.py:
	Ensure that recorded files have no gaps overlapping them

2010-11-16  Josep Joan Ribas  <jribas@flumotion.com>

	* flumotion/component/producers/videotest/wizard.glade: