@@ -3,6 +3,13 @@
 	reviewed by: Xavier Queralt
 
 	* flumotion/component/consumers/disker/disker.py:
+	Make use of the helper function _openFile properly
+
+2010-11-29  Andoni Morales Alastruey  <amorales@flumotion.com>
+
+	reviewed by: Xavier Queralt
+
+	* flumotion/component/consumers/disker/disker.py:
 	Remove unused imports
 
 2010-11-29  Andoni Morales Alastruey  <amorales@flumotion.com>
